Correção de botão Editar

--- a/Web/Bookaway/src/main/webapp/estante.html
+++ b/Web/Bookaway/src/main/webapp/estante.html
@@ -84,7 +84,7 @@
                                 <tr>
                                     <td style="padding-right: 20px; padding-left: 50px;"> 
                                         <img src="img/estante/Harry_Potter.jpg" width="200" height="300" alt="HarryPotter">
-                                        <button class="btn btn-transparent" href="#welcome"  class="btn-block page-scroll"  accesskey=""style="width:95px; padding: 15px;" href="#welcome"  class="btn-block page-scroll" class="btn-block page-scroll">Editar</button><button class="btn btn-light" href="portifolio" style="width:105px; padding: 15px;">Remover</button>
+                                        <a class="btn btn-transparent" href="#edit"  class="btn-block page-scroll"  accesskey=""style="width:95px; padding: 15px;">Editar</a><a class="btn btn-light" href="portifolio" style="width:105px; padding: 15px;">Remover</a>
                                     </td>
                                     <td class="media-body">
                                         <h3>Harry Potter e as Relíquias da Morte</h3>
@@ -99,7 +99,7 @@
                                 <tr>
                                     <td style="padding-right: 20px; padding-left: 50px;"> 
                                         <img src="img/estante/Sonho_William.jpg" width="190" height="290" alt="Sonho">
-                                        <a class="btn btn-light" href="#welcome"  class="btn-block page-scroll">Remover Livro</a>
+                                        <a class="btn btn-light" href="#e"  class="btn-block page-scroll">Remover Livro</a>
                                     </td>
                                     <td class="media-body">
                                         <h3>Sonho de uma noite de verão</h3>
@@ -178,7 +178,7 @@
         </section>
 
         <!-- Adicionar ou Editar Livro-->
-        <section id="welcome">
+        <section id="edit">
             <div class="container">
                 <h2>Adicionar ou Editar Livro</h2>
                 <hr class="light-sep">
@@ -190,7 +190,7 @@
                     <div class="col-md-6">
                         <form method="post" action="upload" enctype="multipart/form-data">
                             <br>
-                            <h6>Nome</h6>
+                            <h6>Título</h6>
                             <input type="text" required="required" class="form-control" name="Nome" placeholder="Nome">
 
                             <h6>Coleção</h6>
