--- a/Web/Bookaway/src/main/webapp/index.html
+++ b/Web/Bookaway/src/main/webapp/index.html
@@ -165,24 +165,18 @@
                 <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
                     <form>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="Name" placeholder="Nome">
+                            <input type="text" required="required" class="form-control" id="Name" placeholder="Nome">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="UserName" placeholder="Username">
+                            <input type="text" required="required" class="form-control" id="UserName" placeholder="Username">
                         </div>
                         <div class="form-group">
-                            <input type="number" class="form-control" id="CEP" placeholder="CEP">
+                            <input type="text" required="required" class="form-control" id="Email" placeholder="Email">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="Email" placeholder="Email">
+                            <input type="password" required="required" class="form-control" id="senha" placeholder="Senha">
                         </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" id="senha" placeholder="Senha">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" id="confirma" placeholder="Corfirmar Senha">
-                        </div>
-                        <a href="#fun-facts" class="btn-block">Cadastrar</a>
+                        <a class="btn-block">Cadastrar</a>
                     </form>
                 </div>
             </div>
@@ -197,7 +191,7 @@
                 <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
                     <form style='margin-top:70px;'>
                         <div class="form-group">
-                            <input style= 'border: 2px solid #24242a; color: #fff; min-height: 45px; border-radius: 0;' type="text" class="form-control" id="LoginUnico" placeholder="Username ou Email">
+                            <input style= 'border: 2px solid #24242a; color: #fff; min-height: 45px; border-radius: 0;' type="text" class="form-control" id="LoginUnico" placeholder="Username">
                         </div>
                         <div class="form-group">
                             <input style= 'border: 2px solid #24242a; color: #fff; min-height: 45px; border-radius: 0;' type="password" class="form-control" id="senha" placeholder="Senha">
