--- a/Web/Bookaway/src/main/webapp/perfil.html
+++ b/Web/Bookaway/src/main/webapp/perfil.html
@@ -66,23 +66,24 @@
                     </div>
                 </div>
             </nav>
+        </section>
 
-            <!-- Welcome
-                    ============================================= -->
-            <section id="welcome">
-                <div class="container">
-                    <br>
-                    <h2>SEU PERFIL</h2>
-                    <hr class="sep">
-                </div>
-            </section>
+        <!-- Welcome
+                ============================================= -->
+        <section id="welcome">
+            <div class="container">
+                <br>
+                <h2>SEU PERFIL</h2>
+                <hr class="sep">
+            </div>
         </section>
 
         <!-- Sobre
             ============================================= -->
         <section id="services">
             <div class="column">
-                <img src="img/perfil/profile.png" width="100%"> </div>
+                <img src="img/perfil/profile.png" width="100%">
+            </div>
             <div class="container">
                 <div class="services-box">
                     <div>
@@ -90,24 +91,20 @@
                             <li style="display:inline;">
                                 <div style='text-align: right justify; width: 75px; display: inline-block; margin-right: 150px; margin-bottom: 50px;'>
                                     <h3 style='color: #fff;'>NOME:</h3>
-                                    <h3 style='color: #fff;'>USERNAME:</h3>
-                                    <h3 style='color: #fff;'>CEP:</h3>
                                     <h3 style='color: #fff;'>EMAIL:</h3>
+                                    <h3 style='color: #fff;'>SENHA:</h3>
                                 </div>
                             </li>
                             <li style="display:inline;">
                                 <div style='text-align: right justify; width: 500px; display: inline-block; margin-bottom: 50px;'>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" id="Name" placeholder="Xpmets Kalyn Marjoriê Kozihell">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="UserName" placeholder="Xpmets">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="number" class="form-control" id="CEP" placeholder="74663520">
+                                        <input type="text" class="form-control" id="Name" placeholder="Nome">
                                     </div>
                                     <div class="form-group">
                                         <input type="text" class="form-control" id="Email" placeholder="emailexemplo@exemplo.com">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" id="senha" placeholder="******">
                                     </div>
                             </li>
 
