--- a/Web/Bookaway/src/main/webapp/perfil.html
+++ b/Web/Bookaway/src/main/webapp/perfil.html
@@ -66,24 +66,23 @@
                     </div>
                 </div>
             </nav>
-        </section>
 
-        <!-- Welcome
-                ============================================= -->
-        <section id="welcome">
-            <div class="container">
-                <br>
-                <h2>SEU PERFIL</h2>
-                <hr class="sep">
-            </div>
+            <!-- Welcome
+                    ============================================= -->
+            <section id="welcome">
+                <div class="container">
+                    <br>
+                    <h2>SEU PERFIL</h2>
+                    <hr class="sep">
+                </div>
+            </section>
         </section>
 
         <!-- Sobre
             ============================================= -->
         <section id="services">
             <div class="column">
-                <img src="img/perfil/profile.png" width="100%">
-            </div>
+                <img src="img/perfil/profile.png" width="100%"> </div>
             <div class="container">
                 <div class="services-box">
                     <div>
@@ -91,20 +90,24 @@
                             <li style="display:inline;">
                                 <div style='text-align: right justify; width: 75px; display: inline-block; margin-right: 150px; margin-bottom: 50px;'>
                                     <h3 style='color: #fff;'>NOME:</h3>
+                                    <h3 style='color: #fff;'>USERNAME:</h3>
+                                    <h3 style='color: #fff;'>CEP:</h3>
                                     <h3 style='color: #fff;'>EMAIL:</h3>
-                                    <h3 style='color: #fff;'>SENHA:</h3>
                                 </div>
                             </li>
                             <li style="display:inline;">
                                 <div style='text-align: right justify; width: 500px; display: inline-block; margin-bottom: 50px;'>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" id="Name" placeholder="Nome">
+                                        <input type="text" class="form-control" id="Name" placeholder="Xpmets Kalyn Marjoriê Kozihell">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" id="UserName" placeholder="Xpmets">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="number" class="form-control" id="CEP" placeholder="74663520">
                                     </div>
                                     <div class="form-group">
                                         <input type="text" class="form-control" id="Email" placeholder="emailexemplo@exemplo.com">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="senha" placeholder="******">
                                     </div>
                             </li>
 
@@ -114,13 +117,32 @@
             </div>
         </section>
 
-        <!-- App
+        <!-- Botoes de salvar e deletar
            ============================================= -->
-        <section id="portfolio">
-            <div class="container-fluid">
-                <div>
-                    <a class="btn btn-light" href="Perfil.html" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Salvar</a>
+        <section id="savedelete">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-5">
+                    <table>
+                        <tr>
+                            <td style="padding-left: 50px; "> 
+                                <a class="btn btn-light" href="Perfil.html" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Salvar</a>
+                            </td>
+
+                        </tr>
+                    </table>
                 </div>
+                <div class="col-md-3">
+                    <table>
+                        <tr>
+                            <td style="padding-right: 50px;"> 
+                                <a class="btn btn-light" href="Perfil.html" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Deletar</a>
+                            </td>
+
+                        </tr>
+                    </table>
+                </div>
+                <div class="col-md-2"></div>
             </div>
         </section>
         <!-- Informações
