Correção no Usuário

--- a/Web/Bookaway/src/main/webapp/perfil.html
+++ b/Web/Bookaway/src/main/webapp/perfil.html
@@ -110,7 +110,6 @@
                                         <input type="text" class="form-control" id="Email" placeholder="emailexemplo@exemplo.com">
                                     </div>
                             </li>
-
                         </ul>
                     </div>
                 </div>
@@ -136,9 +135,8 @@
                     <table>
                         <tr>
                             <td style="padding-right: 50px;"> 
-                                <a class="btn btn-light" href="Perfil.html" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Deletar</a>
+                                <a class="btn btn-light" href="/UserControl" style='border: 5px solid #24242a; margin-top: 50px; width: 300px;'>Deletar</a>
                             </td>
-
                         </tr>
                     </table>
                 </div>
