Incluindo pagina EditarLivro

--- a/Web/Bookaway/src/main/webapp/perfil.html
+++ b/Web/Bookaway/src/main/webapp/perfil.html
@@ -58,7 +58,7 @@
                             <ul class="nav navbar-nav">
                                 <li><a href="livrosemmovimento.html" class="page-scroll">HOME</a></li>
                                 <li><a href="pesquisa.html" class="page-scroll">PESQUISAR</a></li>
-                                <li><a href="estante.html" class="page-scroll">ESTANTE</a></li>
+                                <li><a href="estante.jsp" class="page-scroll">ESTANTE</a></li>
                                 <li><a href="Perfil.html" class="page-scroll">MINHA CONTA</a></li>
                                 <li><a href="index.html" class="page-scroll">SAIR</a></li>
                             </ul>
