--- a/Web/Bookaway/src/main/webapp/pesquisa.html
+++ b/Web/Bookaway/src/main/webapp/pesquisa.html
@@ -56,7 +56,7 @@
                             <ul class="nav navbar-nav">
                                 <li><a href="livrosemmovimento.html" class="page-scroll">Home</a></li>
                                 <li><a href="#welcome" class="page-scroll">Pesquisar</a></li>
-                                <li><a href="estante.html">Estante</a></li>
+                                <li><a href="estante.jsp">Estante</a></li>
                                 <li><a href="perfil.html">Minha Conta</a></li>
                                 <li><a href="index.html">Sair</a></li>
                             </ul>
