Atualizando links quebrados

--- a/Web/Bookaway/src/main/webapp/pesquisa.html
+++ b/Web/Bookaway/src/main/webapp/pesquisa.html
@@ -54,11 +54,11 @@
                     <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
                         <div class="col-md-8 col-xs-12 nav-wrap">
                             <ul class="nav navbar-nav">
-                                <li><a href="livrosemmovimento.html" class="page-scroll">Home</a></li>
+                                <li><a href="livrosemmovimento.jsp" class="page-scroll">Home</a></li>
                                 <li><a href="#welcome" class="page-scroll">Pesquisar</a></li>
                                 <li><a href="estante.jsp">Estante</a></li>
                                 <li><a href="perfil.html">Minha Conta</a></li>
-                                <li><a href="index.html">Sair</a></li>
+                                <li><a href="index.jsp">Sair</a></li>
                             </ul>
                         </div>
                     </div>
