--- a/Web/Bookaway/src/main/webapp/perfil.html
+++ b/Web/Bookaway/src/main/webapp/perfil.html
@@ -56,11 +56,11 @@
                     <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
                         <div class="col-md-8 col-xs-12 nav-wrap">
                             <ul class="nav navbar-nav">
-                                <li><a href="livrosemmovimento.html" class="page-scroll">HOME</a></li>
+                                <li><a href="livrosemmovimento.jsp" class="page-scroll">HOME</a></li>
                                 <li><a href="pesquisa.html" class="page-scroll">PESQUISAR</a></li>
                                 <li><a href="estante.jsp" class="page-scroll">ESTANTE</a></li>
                                 <li><a href="Perfil.html" class="page-scroll">MINHA CONTA</a></li>
-                                <li><a href="index.html" class="page-scroll">SAIR</a></li>
+                                <li><a href="index.jsp" class="page-scroll">SAIR</a></li>
                             </ul>
                         </div>
                     </div>
