--- a/Web/Bookaway/src/main/webapp/pesquisa.html
+++ b/Web/Bookaway/src/main/webapp/pesquisa.html
@@ -54,7 +54,7 @@
                     <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
                         <div class="col-md-8 col-xs-12 nav-wrap">
                             <ul class="nav navbar-nav">
-                                <li><a href="livrosemmovimento.jsp" class="page-scroll">Home</a></li>
+                                <li><a href="livrosEmMovimento.jsp" class="page-scroll">Home</a></li>
                                 <li><a href="#welcome" class="page-scroll">Pesquisar</a></li>
                                 <li><a href="estante.jsp">Estante</a></li>
                                 <li><a href="perfil.html">Minha Conta</a></li>
