Correção nome de classe

--- a/Web/Bookaway/src/main/webapp/perfil.html
+++ b/Web/Bookaway/src/main/webapp/perfil.html
@@ -59,7 +59,7 @@
                                 <li><a href="livrosEmMovimento.jsp" class="page-scroll">HOME</a></li>
                                 <li><a href="pesquisa.html" class="page-scroll">PESQUISAR</a></li>
                                 <li><a href="estante.jsp" class="page-scroll">ESTANTE</a></li>
-                                <li><a href="Perfil.html" class="page-scroll">MINHA CONTA</a></li>
+                                <li><a href="perfil.html" class="page-scroll">MINHA CONTA</a></li>
                                 <li><a href="index.jsp" class="page-scroll">SAIR</a></li>
                             </ul>
                         </div>
